# HospitalityAIPlatform

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  FOUNDATION.md  Makefile  PHASE0.md  PROJECT_EXECUTION_PLAN.md  README.md  alembic.ini  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
alembic/: env.py  script.py.mako
alembic/versions/: 0001_create_tenants.py  0002_tenant_rls_canon.py  0003_outbox_events.py  0004_outbox_next_attempt_at.py  0005_requests_module.py  0005_tenant_config.py  0006_requests_module.py  0007_llm_call_log.py  0008_channels_telegram.py  0009_walking_skeleton.py  0010_service_request_daily_number.py  0011_drop_assigned_status.py  0012_service_request_guest_language.py  0013_service_request_resolution_note.py
backups/: hospitality-20260716T094703Z.dump
docs/: DISCUSSION_LOG.md  GLOSSARY.md
docs/adr/: ADR-000-template.md  ADR-001-modular-monolith.md  ADR-002-tech-stack.md  ADR-003-multitenancy.md  ADR-005-worker.md  ADR-007-fake-adapters.md  ADR-009-outbox-retention-and-backoff.md  ADR-010-golden-set-tenant-demography.md  ADR-011-walking-skeleton-notifications.md  ADR-012-guest-dialog-model.md  ADR-013-request-lifecycle-drop-assigned.md
docs/audits/: 2026-07-21-operational-audit.md  2026-07-21-security-audit.md  2026-07-22-legal-audit-rk.md  2026-07-22-legal-recommendations.md  2026-07-23-ai-quality-audit.md  2026-07-23-docs-drift-audit.md  2026-07-23-optimization-audit.md  2026-07-23-token-economics-audit.md  README.md
docs/audits/prompts/: ai-quality-audit-prompt.md  docs-drift-audit-prompt.md  operational-audit-prompt.md  optimization-audit-prompt.md  token-economics-audit-prompt.md
docs/runbooks/: alerts.md  deploy.md  errors.md  restore.md  review-process.md  secrets.md  staff-ux-check.md  telegram.md
docs/specs/: 0014-ai-gateway.md  0015-orchestrator.md  0016-telegram-channel.md  0017-walking-skeleton.md  0017.1-deterministic-confirmation.md  0018-observability.md  0019-smoke-and-restore.md  0021-request-ux-staff-and-guest.md
ops/: Dockerfile  docker-compose.yml  env-check.sh  smoke-staging.sh  staging-ssh-lib.sh
ops/backup/: backup.sh  fetch.sh
ops/deploy/: .env.staging.example  bootstrap-server.sh  deploy.sh  docker-compose.staging.yml
ops/deploy/cloudflared/: config.yml
src/hospitality/: __init__.py  app.py  broken_type_check.py  worker.py
src/hospitality/ai/: README.md  __init__.py  orchestrator.py  translation.py
src/hospitality/ai/evals/: __init__.py  bakeoff.py
src/hospitality/ai/gateway/: README.md  __init__.py  anthropic_provider.py  api.py  mock_provider.py  models.py  provider.py  schemas.py  service.py
src/hospitality/ai/gateway/tests/: conftest.py  test_anthropic_provider.py  test_gateway.py  test_llm_metrics.py
src/hospitality/ai/prompts/: __init__.py  concierge_v1.md  concierge_v2.md  concierge_v3.md  confirmation_gate_v1.md  translate_to_guest_v1.md  translate_to_staff_v1.md
src/hospitality/ai/tests/: conftest.py  test_golden_set_v0.py  test_orchestrator.py  test_tools.py
src/hospitality/ai/tools/: __init__.py  base.py  create_service_request.py  registry.py
src/hospitality/channels/: __init__.py  base.py
src/hospitality/channels/telegram/: README.md  __init__.py  client.py  guest.py  keyboards.py  models.py  normalize.py  notifications.py  outbound.py  router.py  schemas.py  service.py  staff.py  store.py
src/hospitality/channels/telegram/tests/: conftest.py  test_client.py  test_normalize.py  test_notifications.py  test_staff.py  test_store.py  test_tenant_isolation.py  test_walking_skeleton.py  test_webhook.py  test_webhook_callback.py
src/hospitality/integrations/: __init__.py
src/hospitality/modules/: __init__.py
src/hospitality/modules/requests/: README.md  __init__.py  api.py  events.py  models.py  router.py  schemas.py  service.py
src/hospitality/modules/requests/tests/: __init__.py  conftest.py  test_daily_number.py  test_events.py  test_http_api.py  test_lifecycle.py  test_tenant_isolation.py
src/hospitality/platform/: README.md  __init__.py  auth.py  config.py  events.py  models.py  seed.py
src/hospitality/shared/: README.md  __init__.py  config.py  db.py  errors.py  events.py  health.py  logging.py  metrics.py  middleware.py  sentry.py  tenancy.py
src/hospitality/tools/: __init__.py  alerter.py  publish_demo_event.py  seed.py
tests/: __init__.py  conftest.py  test_alerter.py  test_config.py  test_db.py  test_errors.py  test_events.py  test_health.py  test_import_contracts.py  test_logging.py  test_metrics.py  test_sanity.py  test_seed.py  test_sentry.py  test_tenancy.py  test_tenant_config.py  test_tenant_isolation.py  test_worker.py
tests/smoke/: README.md  conftest.py  test_guest_scenarios.py
