[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hospitality-platform"
version = "0.1.0"
description = "AI Hospitality Platform — мультитенантная SaaS-платформа, где AI является основным интерфейсом отеля"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic-settings>=2.4",
    "asyncpg>=0.29",
    "redis>=5.0",
    "structlog>=24.4",
    "sqlalchemy[asyncio]>=2.0.30",
    "alembic>=1.13",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "import-linter>=2.1",
    "httpx>=0.27",
    "asyncpg-stubs>=0.29",
    "pytest-asyncio>=0.24",
]

[tool.hatch.build.targets.wheel]
packages = ["src/hospitality"]

# ---------------------------------------------------------------------------
# Инструменты качества. Конфигурация — канон (P-12): не менять без ADR/обсуждения.
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort — порядок импортов
    "B",   # bugbear — типичные ошибки
    "UP",  # pyupgrade — современный синтаксис
    "N",   # pep8-naming
    "SIM", # simplify
    "DTZ", # запрет наивных datetime (FOUNDATION §9: только UTC)
]

[tool.ruff.lint.isort]
# Явно, а не эвристикой: у разных версий ruff разное автоопределение first-party,
# из-за чего порядок импортов локально и в CI расходился (Task 0007).
known-first-party = ["hospitality", "tests"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI-канон: Depends(...) в значении по умолчанию — стандартный паттерн DI,
# а не изменяемый default-аргумент, на который предупреждает B008.
extend-immutable-calls = ["fastapi.Depends"]

[tool.mypy]
strict = true
files = ["src", "tests", "alembic"]
mypy_path = "src"
explicit_package_bases = true

[tool.pytest.ini_options]
# Тесты доменных модулей живут внутри модуля (анатомия §5.2, Task 0012):
# второй путь собирает их; общие DB-фикстуры модульные conftest импортируют
# из tests/conftest.py — для этого корень репозитория добавлен в pythonpath.
testpaths = ["tests", "src/hospitality/modules"]
pythonpath = ["."]
# Порог покрытия — часть R-9: enforcement одинаков локально (make check) и в CI.
addopts = "-q --cov --cov-fail-under=80"
# Асинхронные тесты (Task 0008): пишутся как обычные `async def test_...`,
# без декораторов — pytest-asyncio подхватывает их сам.
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = ["src/hospitality"]
# Тесты модулей лежат внутри пакета (§5.2) — в метрику покрытия не входят.
omit = ["*/tests/*"]

[tool.coverage.report]
show_missing = true

# ---------------------------------------------------------------------------
# Импорт-линтер (Task 0003, R-5): границы слоёв из FOUNDATION §5.1 проверяет
# машина, а не ревью. Красный lint-imports = незавершённая работа.
# ---------------------------------------------------------------------------

[tool.importlinter]
root_packages = ["hospitality"]
# Внешние пакеты включаются в граф импортов, чтобы контракт про LLM-провайдеров
# видел импорты их SDK (anthropic и т.п.) даже до появления зависимостей в проекте.
include_external_packages = true

# Контракт 1 — направление слоёв (FOUNDATION §5.1):
# kernel (shared ← platform) ← modules ← composition (ai, channels).
# Слой выше может импортировать слои ниже; обратное и циклы между слоями запрещены.
# ai и channels — сиблинги одного слоя; ":" означает, что их взаимные импорты
# пока не запрещены (направление связи канал ↔ оркестратор решится при реализации
# первого канала). Внутри kernel направление зафиксировано: platform импортирует
# shared, но не наоборот — shared является общей инфраструктурой и не знает ни о чём.
[[tool.importlinter.contracts]]
name = "Layers: kernel <- modules <- composition (FOUNDATION 5.1, R-5)"
type = "layers"
layers = [
    "hospitality.ai : hospitality.channels",
    "hospitality.modules",
    "hospitality.platform",
    "hospitality.shared",
]

# Контракт 2 — integrations подключает только composition root (P-3, §5.1):
# ни kernel, ни доменные модули, ни ai/channels не импортируют адаптеры —
# модули видят интеграции только через порты, объявленные ядром.
# Composition root (появится в Task 0005) в source_modules не входит —
# только ему разрешено подключать адаптеры.
[[tool.importlinter.contracts]]
name = "Only the composition root imports integrations (P-3, R-5)"
type = "forbidden"
source_modules = [
    "hospitality.shared",
    "hospitality.platform",
    "hospitality.modules",
    "hospitality.ai",
    "hospitality.channels",
]
forbidden_modules = ["hospitality.integrations"]

# Контракт 3 — адаптеры реализуют порты kernel'а и не знают о слоях выше (§5.1).
[[tool.importlinter.contracts]]
name = "Integrations depend only on kernel (FOUNDATION 5.1, R-5)"
type = "forbidden"
source_modules = ["hospitality.integrations"]
forbidden_modules = [
    "hospitality.modules",
    "hospitality.ai",
    "hospitality.channels",
]

# Контракт 4 (заготовка) — LLM-провайдеры вызываются только из ai/gateway (§7.2, R-5).
# ОБЯЗАННОСТЬ при развитии ai/: каждый новый подпакет ai/, кроме gateway
# (orchestrator, tools, rag, prompts, evals, ...), добавляется в source_modules.
# Каждый новый SDK LLM-провайдера в зависимостях добавляется в forbidden_modules.
[[tool.importlinter.contracts]]
name = "LLM providers only via ai/gateway (FOUNDATION 7.2, R-5)"
type = "forbidden"
source_modules = [
    "hospitality.shared",
    "hospitality.platform",
    "hospitality.modules",
    "hospitality.channels",
    "hospitality.integrations",
]
forbidden_modules = ["anthropic", "openai"]

# Контракт 5 — внутренности доменного модуля приватны, вход только через api.py
# (§5.2, R-5; появился с первым модулем — requests, Task 0012).
# ОБЯЗАННОСТИ при развитии modules/: каждый новый доменный модуль добавляет
# СВОИ внутренние файлы в forbidden_modules И сам добавляется в source_modules
# (сосед-модуль тоже не лезет в чужие внутренности, §5.1: «публичные API друг
# друга»). tests модуля в forbidden не входят: их не импортирует никто.
[[tool.importlinter.contracts]]
name = "Module internals are private, entry via api.py (FOUNDATION 5.2, R-5)"
type = "forbidden"
source_modules = [
    "hospitality.ai",
    "hospitality.channels",
]
forbidden_modules = [
    "hospitality.modules.requests.models",
    "hospitality.modules.requests.service",
    "hospitality.modules.requests.schemas",
    "hospitality.modules.requests.events",
]
